<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MeshiDoko</string>
    <string name="action_settings">Settings</string>
    <string name="decide">決定</string>
    <string name="people">人数:</string>
    <string name="people_num">人</string>
    <string name="genre">ジャンル:</string>
    <string name="image">店舗画像</string>
    <string name="store_name">店舗名</string>
    <string name="required_time">所要時間</string>
    <string name="catch_copy">キャッチ</string>

</resources>