<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/store_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/image"
        android:padding="10dp"
        android:src="@drawable/tenpo" />

    <TextView
        android:id="@+id/store_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/store_image"
        android:padding="10dp"
        android:text="@string/store_name" />

    <TextView
        android:id="@+id/catch_copy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/store_name"
        android:layout_toRightOf="@id/store_image"
        android:padding="10dp"
        android:text="@string/catch_copy" />

    <TextView
        android:id="@+id/required_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/catch_copy"
        android:layout_toRightOf="@id/store_image"
        android:padding="10dp"
        android:text="@string/required_time" />

</RelativeLayout>